--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,7 +13,7 @@
 .flex-row{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 a{
@@ -187,3 +187,48 @@ a{
     font-weight: 600;
 }
 /* ______________________________________________ */
+.about-container{
+    clip-path: polygon(32% 1%, 68% 6%, 100% 0, 100% 86%, 68% 93%, 33% 88%, 21% 91%, 0 96%, 0 9%, 17% 4%);
+    padding: 4rem 1rem;
+    background: url("img/about-bg.jpg") center ;
+    background-size: cover;
+    background-color: rgba(0,0,0,0.9);
+    background-blend-mode: color-burn;
+    width: 100%;
+    height: 80vh;
+
+}
+
+.about-heading{
+    text-transform: uppercase;
+    font-size: 3rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+    color: white;
+}
+.about-title{
+    width: 30%;
+    /* padding: 0 2rem; */
+
+}
+.about-text{
+    text-align: justify;
+    margin-bottom: 2rem;
+    color: white;
+    
+}
+.about-link{
+    background-color: #ff6a00ea;
+    color: white;
+    padding: 0.8rem 2rem;
+    border-radius: 20px;
+    text-transform: capitalize;
+}
+.about-link:hover{
+    background-color: #c5d00efd;
+    transition: 0.5s;
+}
+.about-icon{
+    width: 350px;
+    height: 350px;
+}
