--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -48,11 +48,11 @@ a{
     height: 60px;
     object-fit: contain;
     border-radius: 50%;
-    border: 2px solid white;
+    border: 2px solid #ff6a00ea;
     padding: 0.5rem;
 }
 .logo-name{
-    color: aliceblue;
+    color: #ff6a00ea;
     text-align: center;
     display: inline-block;
     font-size: 1rem;
@@ -198,7 +198,6 @@ a{
     height: 80vh;
 
 }
-
 .about-heading{
     text-transform: uppercase;
     font-size: 3rem;
@@ -232,3 +231,44 @@ a{
     width: 350px;
     height: 350px;
 }
+/* ____________________________________________ */
+.foodbrand-heading{
+    text-transform: uppercase;
+    font-size: 3rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+    color: black;
+    text-align: center;   
+}
+.foodbrand-text{
+    width: 40%;
+    margin: 0 auto;
+    padding-bottom: 1rem;
+    color: lightslategrey;   
+}
+.brandmenu-container{
+    padding-top: 2rem;   
+    margin-bottom: 1rem;
+}
+.brandmenu{
+    width: 25.33%;
+    padding: 2rem 1rem;
+    margin: 0 0.2rem;   
+    box-shadow: 0px 1px 5px 2px #808080;
+    border-radius: 5px;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+.menubrand-text{
+    color: gray;
+    margin-bottom: 1rem;
+    text-align: justify;   
+}
+.menubrand-image{
+    width: 250px;
+    height: 250px;
+    /* border-radius: 50%; */
+    /* border: 5px solid #c5d00efd; */
+    margin-bottom: 1rem;
+}
+/* ______________________________________________ */
